[package]
name = "rust-error-stack-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }